src/app/courses/courses.scss
@use '../variables' as v;
@use './courses-shared' as c;

planet-courses {
  .mat-column-select {
    max-width: 44px;
    padding: 0 0 0 24px;
  }

  .mat-column-createdDate {
    max-width: 100px;
  }

  .column {
    display: flex;
    flex-direction: column;

    > * {
      line-height: normal;
    }
  }

  .course-progress {
    margin-top: 0.5rem;
  }

  .ellipsis-menu {
    text-align: center;
  }

  .search-bar {
    height: c.$toolbar-height;
  }

  .break-word {
    word-break: break-word;
  }

  .view-full-height.view-with-search {
    height: calc(#{v.$view-container-height} - #{c.$toolbar-height});
  }

  @media(max-width: v.$screen-md) {
    .mat-column-createdDate {
      max-width: 70px;
    }
  }

  .course-table-container {
  display: flex;
  flex-direction: column;
  height: v.$view-container-height;
  overflow: hidden;
}

.card-table {
  flex: 1;
  min-height: 0;
  overflow: auto;
}

}

